<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_id"
    style="@style/MyCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/dp_single">

    <ImageView
        android:id="@+id/imageView_id"
        android:layout_width="79dp"
        android:layout_height="107dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_route"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DateText_id" />

    <TextView
        android:id="@+id/TripName_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/imageView_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_id" />


    <TextView
        android:id="@+id/time_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/timeText_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeText_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/Time"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/Date_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/DateText_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DateText_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/From_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/FromText_id"
        app:layout_constraintTop_toBottomOf="@+id/imageView_id" />

    <TextView
        android:id="@+id/FromText_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/From"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/From_id"
        app:layout_constraintTop_toBottomOf="@+id/imageView_id" />

    <TextView
        android:id="@+id/To_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_half"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginLeft="1dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/ToText_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/From_id" />

    <TextView
        android:id="@+id/ToText_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_half"
        android:text="@string/To"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/To_id"
        app:layout_constraintTop_toBottomOf="@+id/From_id" />


    <Button
        android:id="@+id/start"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/glory_button"
        android:text="Start Trip"
        android:textColor="@color/backgroundWhite"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/showNotes"
        app:layout_constraintTop_toBottomOf="@+id/To_id" />


      <TextView
          android:id="@+id/showNotes"
          android:layout_width="60dp"
          android:layout_height="45dp"
          android:layout_marginTop="10dp"
          android:autofillHints="."
          android:background="@drawable/ic_pin"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          app:layout_constraintLeft_toRightOf="@+id/start"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/To_id"  />

      <TextView
        android:id="@+id/textViewOptions"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="&#8942;"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
  </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>