<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_id"
    style="@style/MyCardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_single"
            android:visibility="visible">

            <TextView
                android:id="@+id/history_trip_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:background="@drawable/login_edittext_style"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_marginTop="10dp"
                android:id="@+id/history_imageView_id"
                android:layout_width="wrap_content"
                android:layout_height="106dp"
                android:src="@drawable/ic_route"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/history_trip_name" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/history_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="148dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/historyshowTripsDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|center_horizontal|fill_horizontal|end"

            android:background="@color/backgroundWhite"

            android:visibility="gone">

            <LinearLayout
                android:id="@+id/Test"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/Time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/history_timeText_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/Time"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/history_time_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/history_timeText_id"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/history_DateText_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/history_timeText_id"
                        android:layout_marginLeft="10dp"
                        android:text="@string/Date"

                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/history_Date_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/history_time_id"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/history_DateText_id"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/From"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/history_FromText_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/history_DateText_id"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/From"

                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/history_From_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/history_Date_id"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/history_FromText_id"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/To"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/history_ToText_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/history_From_id"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"

                        android:text="@string/To"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/history_To_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/history_From_id"
                        android:layout_marginTop="5dp"
                        android:layout_toRightOf="@id/history_ToText_id"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/history_Notes"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/glory_button"
            android:text="Show Notes"
            android:textColor="@color/backgroundWhite"
            android:textSize="14sp" />

        <Button
            android:id="@+id/history_Delete"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:background="@drawable/glory_button"
            android:text="Delete Trip"
            android:textColor="@color/backgroundWhite"
            android:textSize="14sp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>